--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,10 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <!--<link href="/styles.css" rel="stylesheet" type="text/css" />-->
 </head>
+<base href="/">
 <body>
   <app-root>Loading...</app-root>
 </body>
